<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:ignore="HardcodedText">


    <EditText
        android:id="@+id/editTextFolderName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:hint="@string/folder_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextFileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-5dp"
        android:layout_marginTop="101dp"
        android:ems="10"
        android:hint="@string/file_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="168dp"
        android:ems="10"
        android:hint="@string/content"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/buttonWriteFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="274dp"
        android:layout_marginEnd="278dp"
        android:layout_weight="1"
        android:text="@string/write_file" />

    <Button
        android:id="@+id/buttonReadFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="349dp"
        android:layout_weight="1"
        android:text="@string/read_file" />

    <Button
        android:id="@+id/buttonDeleteFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="425dp"
        android:layout_weight="1"
        android:text="@string/delete_file" />


</RelativeLayout>